structural-typing/tests/ui/modify_invalid_operator_bang.stderr
error: Invalid operator '!' in modify!. Valid operators: + (Present), - (Absent), ? (Optional)
  --> tests/ui/modify_invalid_operator_bang.rs:3:1
   |
 3 | #[structural]
   | ^^^^^^^^^^^^^
...
10 |     type Invalid = user::modify!(user::AllAbsent, !email);
   |                    -------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `user::modify` (in Nightly builds, run with -Z macro-backtrace for more info)
